--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,14 @@
-*{
+@import url("https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap");
+
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: "Quicksand", sans-serif;
 }
 
-:root{
-  --gray-background: #b5b5b5;
-  --gray-background-card: #3c3c3c; 
+:root {
+  --black-background: #000;
+  --black-background-card: #333;
+  --white: #f6f6f6;
 }
